<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    tools:context=".Activities.LoginActivity">

    <ScrollView
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/offwhite"
                android:padding="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10"
                app:cardElevation="@dimen/dp_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/boldBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/welcome"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_signUp"
                        style="@style/mediumBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:text="@string/sign_up"
                        android:textSize="@dimen/standard_text_size"
                        app:layout_constraintBottom_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView" />

                    <TextView
                        android:id="@+id/tv_forgetPassword"
                        style="@style/mediumBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/forgot_password"
                        android:textSize="@dimen/sp_14"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/mediumBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/sign_in_to_continue"
                        android:textColor="#b2b2b2"
                        android:textSize="13sp"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/tv_signUp"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            style="@style/mediumBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:textColorHint="#b2b2b2"
                            android:textSize="@dimen/standard_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/mediumBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColorHint="#b2b2b2"
                            android:textSize="@dimen/standard_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_signin"
                        style="@style/regularWhite"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="@dimen/standard_button_height"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/black_rouded_border"
                        android:text="@string/sign_in"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                        app:layout_constraintTop_toBottomOf="@+id/tv_forgetPassword" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView5"
                style="@style/mediumBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/or"
                android:textSize="@dimen/standard_text_size"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/textView7"
                style="@style/mediumBlack"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/standard_button_height"
                android:layout_marginTop="30dp"
                android:background="@drawable/gray_rouded_border"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/sign_in_with_facebook"
                android:textSize="@dimen/sp_14"
                android:visibility="invisible"
                app:drawableLeftCompat="@drawable/icon_facebook"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                style="@style/mediumBlack"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/standard_button_height"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/gray_rouded_border"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/sign_in_with_google"
                android:textSize="@dimen/sp_14"
                android:visibility="invisible"
                app:drawableLeftCompat="@drawable/icons_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>