<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    tools:context=".Activities.LoginActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/standard_left"
        android:layout_marginLeft="@dimen/standard_left"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/ic_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_left"
                android:layout_marginLeft="@dimen/standard_left"
                android:layout_marginTop="@dimen/standard_button_height"
                android:layout_marginEnd="@dimen/standard_right"
                android:layout_marginRight="@dimen/standard_right"
                android:layout_marginBottom="@dimen/dp_40"
                android:background="@color/offwhite"
                android:padding="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/boldBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/sign_up"
                        android:textSize="@dimen/heading_text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout13"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dp_30"
                        android:layout_marginEnd="@dimen/standard_right"
                        android:layout_marginRight="@dimen/standard_right"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            style="@style/mediumBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_name"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/standard_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout13"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout13">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            style="@style/mediumBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/standard_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout19"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout13"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_number"
                            style="@style/mediumBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:maxEms="13"
                            android:maxLength="13"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/standard_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout19"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/mediumBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/standard_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout20"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        app:boxBackgroundColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_confirmpassword"
                            style="@style/mediumBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:textColorHint="@color/gray"
                            android:textSize="@dimen/standard_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_signup"
                        style="@style/regularWhite"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="@dimen/standard_button_height"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/black_rouded_border"
                        android:text="@string/sign_up"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                        app:layout_constraintTop_toBottomOf="@+id/cb_robort" />

                    <CheckBox
                        android:id="@+id/cb_robort"
                        style="@style/regularBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="I'm not a Robot"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout20"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout20" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>